crates/character/src/background/snapshots/character__background__faction_agent__tests__flaws.snap
---
source: crates/character/src/background/faction_agent.rs
expression: background.flaws()

---
- "I judge others harshly, and myself even more severely."
- "I put too much trust in those who wield power within my faction's hierarchy."
- My loyalty sometimes leads me to blindly trust those that profess membership in my faction.
- I am inflexible in my thinking.
- I am suspicious of strangers and expect the worst of them.
- "Once I pick a goal, I become obsessed with it to the detriment of everything else in my life."

