crates/character/src/background/snapshots/character__background__faction_agent__tests__ideals.snap
---
source: crates/character/src/background/faction_agent.rs
expression: background.ideals()

---
- - Tradition. The ancient traditions of membership and secrecy must be preserved and upheld.
  - Lawful
- - "Charity. I always try to help those in need, no matter what the personal cost."
  - Good
- - Change. We must help bring about the changes the faction is constantly working in the world
  - Chaotic
- - "Power. I hope to one day rise to the top of my faction's hierarchy."
  - Lawful
- - "Faith. I trust that my faction will guide my actions. I have faith that if I work hard, things will go well."
  - Lawful
- - "Aspiration. I seek to prove myself worthy of my faction's favor by matching my actions against their teachings."
  - Any

