crates/character/src/background/snapshots/character__background__faction_agent__tests__skills.snap
---
source: crates/character/src/background/faction_agent.rs
expression: "FactionAgent::skills()"

---
- Insight
- AnimalHandling
- Arcana
- Deception
- History
- Insight
- Intimidation
- Investigation
- Medicine
- Nature
- Perception
- Performance
- Persuasion
- Religion
- Survival

