crates/character/src/background/snapshots/character__background__faction_agent__tests__snapshot.snap
---
source: crates/character/src/background/faction_agent.rs
expression: background

---
type: FactionAgent
faction: OrderOfTheGauntlet

