crates/character/src/background/snapshots/character__background__faction_agent__tests__snapshot_addl_equipment.snap
---
source: crates/character/src/background/faction_agent.rs
expression: background.addl_equipment()

---
- From:
    - Other: the badge of your faction
    - Other: the emblem of your faction
- From:
    - Other: a copy of a seminal faction text
    - Other: a code-book for a covert faction

