crates/character/src/background/snapshots/character__background__faction_agent__tests__snapshot_addl_proficiences.snap
---
source: crates/character/src/background/faction_agent.rs
expression: background.addl_proficiencies()

---
- Skill:
    - - AnimalHandling
      - Arcana
      - Deception
      - History
      - Insight
      - Intimidation
      - Investigation
      - Medicine
      - Nature
      - Perception
      - Performance
      - Persuasion
      - Religion
      - Survival
    - 1

