crates/character/src/background/snapshots/character__background__faction_agent__tests__snapshot_display.snap
---
source: crates/character/src/background/faction_agent.rs
expression: background

---
The Order of the Gauntlet Faction Agent
