crates/character/src/background/snapshots/character__background__faction_agent__tests__snapshot_equipment.snap
---
source: crates/character/src/background/faction_agent.rs
expression: background.equipment()

---
- Gear:
    Other: ClothesCommon
- Gear:
    Other: Pouch

