crates/character/src/background/snapshots/character__background__faction_agent__tests__snapshot_features.snap
---
source: crates/character/src/background/faction_agent.rs
expression: background.features()

---
- title: Safe Haven
  citation:
    - Scag
    - 147

